bwn(4): BWN_GPL_PHY: make compile again

compiler complains about error: comparison of different enumeration types
('bwn_phy_band_t' and 'bwn_band_t');  so use the correct enum value.

Sponsored by:	The FreeBSD Foundation
PR:		287695
Reported by:	(tom.mcclean gmail.com)
MFC after:	3 days