sys/gnu/dev/bwn/phy_n/if_bwn_phy_n_ppr.c
@@ -247,7 +247,7 @@ bool bwn_ppr_load_max_from_sprom(struct bwn_mac *mac, struct bwn_ppr *ppr,
 		}
 	}
 
-	if (band == BWN_BAND_2G) {
+	if (band == BWN_PHY_BAND_2G) {
 		uint16_t ck2gpo;
 
 		error = bhnd_nvram_getvar_uint16(sc->sc_dev, BHND_NVAR_CCK2GPO,
